# sdkwork-search

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/: README.md
apps/: README.md
apps/sdkwork-search-common/: README.md
apps/sdkwork-search-flutter-mobile/: AGENTS.md  GEMINI.md  pubspec.yaml  sdkwork.app.config.json
apps/sdkwork-search-flutter-mobile/.sdkwork/: README.md
apps/sdkwork-search-flutter-mobile/docs/: INDEX.yaml  README.md
apps/sdkwork-search-flutter-mobile/lib/: app.dart  auth_gate.dart
apps/sdkwork-search-flutter-mobile/specs/: README.md  component.spec.json  dependency.composition.json
apps/sdkwork-search-h5/: AGENTS.md  CODEX.md  README.md  sdkwork.app.config.json
apps/sdkwork-search-h5/.sdkwork/: README.md
apps/sdkwork-search-h5/docs/: INDEX.yaml  README.md
apps/sdkwork-search-h5/specs/: README.md  component.spec.json  dependency.composition.json
apps/sdkwork-search-h5/src/: App.tsx
apps/sdkwork-search-pc/: AGENTS.md  CLAUDE.md  sdkwork.app.config.json
apps/sdkwork-search-pc/.sdkwork/: .gitignore  README.md
apps/sdkwork-search-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-search-pc/specs/: README.md  component.spec.json  dependency.composition.json
configs/: README.md
crates/: README.md
crates/sdkwork-api-search-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-search-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-search-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-search-standalone-gateway/: Cargo.toml  README.md
crates/sdkwork-api-search-standalone-gateway/src/: main.rs
crates/sdkwork-api-search-standalone-gateway/src/bootstrap/: config.rs  database.rs  routers.rs  services.rs
crates/sdkwork-api-search-standalone-gateway/src/preflight/: mod.rs  providers.rs
crates/sdkwork-api-search-standalone-gateway/src/server/: listen.rs  shutdown.rs
crates/sdkwork-routes-search-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-search-backend-api/: Cargo.toml  README.md
crates/sdkwork-routes-search-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-search-backend-api/src/: error.rs  handlers.rs  lib.rs  manifest.rs  paths.rs  routes.rs  state.rs
crates/sdkwork-routes-search-backend-api/src/mapper/: mod.rs
crates/sdkwork-routes-search-backend-api/tests/: search_backend_routes_standard.rs
crates/sdkwork-search-database-host/: Cargo.toml
crates/sdkwork-search-database-host/src/: lib.rs
crates/sdkwork-search-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-search-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-search-indexing-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-search-indexing-repository-sqlx/migrations/: 0002_search_performance.sql  DEPRECATED.md
crates/sdkwork-search-indexing-repository-sqlx/src/: error.rs  lib.rs  service_adapter.rs
crates/sdkwork-search-indexing-repository-sqlx/src/db/: mod.rs  rows.rs  schema.rs
crates/sdkwork-search-indexing-repository-sqlx/src/mapper/: mod.rs
crates/sdkwork-search-indexing-repository-sqlx/src/repository/: document_repository.rs  index_repository.rs  mod.rs  promotion_repository.rs  queries.rs  suggestion_repository.rs  user_event_repository.rs
crates/sdkwork-search-indexing-repository-sqlx/tests/: repository_smoke.rs
crates/sdkwork-search-indexing-service/: Cargo.toml
crates/sdkwork-search-indexing-service/src/: error.rs  lib.rs
crates/sdkwork-search-indexing-service/src/domain/: mod.rs  models.rs
crates/sdkwork-search-indexing-service/src/ports/: document_upload.rs  mod.rs  repository.rs
crates/sdkwork-search-indexing-service/src/service/: indexing_service.rs  mod.rs
crates/sdkwork-search-promotion-service/: Cargo.toml
crates/sdkwork-search-provider-memory/: Cargo.toml
crates/sdkwork-search-provider-memory/src/: lib.rs  provider.rs
crates/sdkwork-search-provider-postgresql/: Cargo.toml
crates/sdkwork-search-provider-postgresql/src/: lib.rs  provider.rs
crates/sdkwork-search-provider-spi/: Cargo.toml
crates/sdkwork-search-provider-spi/src/: context.rs  document.rs  error.rs  lib.rs  provider.rs  query.rs  registry.rs
crates/sdkwork-search-query-service/: Cargo.toml
crates/sdkwork-search-query-service/src/: error.rs  lib.rs
crates/sdkwork-search-query-service/src/domain/: mod.rs  models.rs
crates/sdkwork-search-query-service/src/ports/: mod.rs  repository.rs
crates/sdkwork-search-query-service/src/service/: mod.rs  query_service.rs
crates/sdkwork-search-recommendation-service/: Cargo.toml
crates/sdkwork-search-service-host/: Cargo.toml  README.md
crates/sdkwork-search-service-host/src/: container.rs  lib.rs  runtime.rs
crates/sdkwork-search-standalone-gateway/: Cargo.toml  README.md
crates/sdkwork-search-storage-sqlx-rust/: Cargo.toml  README.md
crates/sdkwork-search-storage-sqlx-rust/migrations/: 0001_search_storage.sql  DEPRECATED.md
crates/sdkwork-search-storage-sqlx-rust/specs/: README.md  component.spec.json
crates/sdkwork-search-storage-sqlx-rust/src/: bootstrap.rs  lib.rs
crates/sdkwork-search-storage-sqlx-rust/tests/: search_storage_standard.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
deployments/: README.md
docs/: INDEX.yaml  NAMING_DEVIATIONS.md  README.md
docs/product/prd/: PRD.md
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: README.md  search-governance.test.mjs
sdks/: README.md  materialize-search-v3-openapi-boundaries.mjs
sdks/sdkwork-search-app-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
sdks/sdkwork-search-backend-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
specs/: README.md  component.spec.json  iam.module.manifest.json
tests/: README.md
tools/: README.md  materialize_search_database_contract.mjs
(+87 files in other folders)
