[package]
name = "sdkwork-api-search-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-search application HTTP plane."

[lib]
name = "sdkwork_api_search_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-routes-search-app-api.workspace = true
sdkwork-routes-search-backend-api.workspace = true
