[package]
name = "sdkwork-routes-search-backend-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDKWork Search backend-api route crate with sdkwork-web-contract integration."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-web-contract = { workspace = true }
sdkwork-search-provider-spi = { workspace = true }
sdkwork-search-query-service = { workspace = true }
sdkwork-search-indexing-service = { workspace = true }
sdkwork-search-recommendation-service = { workspace = true }
sdkwork-search-promotion-service = { workspace = true }
axum.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
