[package]
name = "sdkwork-search-database-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDKWork Search database lifecycle bootstrap."

[lib]
name = "sdkwork_search_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork-database-config = { workspace = true }
sdkwork-database-lifecycle = { workspace = true }
sdkwork-database-spi = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
