[package]
name = "sdkwork-search-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-search application HTTP plane."

[lib]
name = "sdkwork_search_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-search-provider-spi = { workspace = true }
sdkwork_routes_search_app_api.workspace = true
sdkwork_routes_search_backend_api.workspace = true
