[package]
name = "sdkwork-search-provider-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-memory SearchProvider implementation for tests and small datasets."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-search-provider-spi = { workspace = true }
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
