[package]
name = "sdkwork-search-storage-sqlx"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork Search SQL storage contracts and migrations."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-database-config = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
sdkwork-search-database-host = { workspace = true }
